[tool.poetry]
name = "rl-car-racing"
version = "0.1.0"
description = ""
authors = ["Mikolaj Bogucki <mikolaj.bogucki@pearson.com>"]

[tool.poetry.dependencies]
python = "^3.8"
gym = "^0.18.0"
Box2D = "^2.3.10"
torch = "^1.8.0"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
opencv-python = "^4.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
